--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,6 @@
   width:500px;
   
   padding:10px;
-  background-color: rgba(233, 233, 245,0.3);
+  background-color: rgba(215, 215, 223, 0.3);
   margin-top: 120px;
 }
